WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253720
Fix undefined behavior in valueFromPool(Span<LazyNeverDestroyed<CSSPrimitiveValue>>, double)
https://bugs.webkit.org/show_bug.cgi?id=253720
Summary
Fix undefined behavior in valueFromPool(Span<LazyNeverDestroyed<CSSPrimitiveV...
Chris Dumez
Reported
2023-03-10 10:36:50 PST
This undefined behavior was causing crashes in our production builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-03-10 10:36:53 PST
<
rdar://problem/106522324
>
Chris Dumez
Comment 2
2023-03-10 10:39:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11369
EWS
Comment 3
2023-03-10 13:21:34 PST
Committed
261527@main
(fa8dddf7984e): <
https://commits.webkit.org/261527@main
> Reviewed commits have been landed. Closing PR #11369 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug