Cherry-pick 261527@main (fa8dddf7984e). https://bugs.webkit.org/show_bug.cgi?id=253720

Fix undefined behavior in valueFromPool(Span<LazyNeverDestroyed<CSSPrimitiveValue>>, double)
    https://bugs.webkit.org/show_bug.cgi?id=253720
    rdar://106522324

    Reviewed by Darin Adler.

    Fix undefined behavior in valueFromPool(). This appeared to be the cause of
    the crashes we started seeing on production builds yesterday. Alexey P. found
    the issue with a UBSan build.

    * Source/WebCore/css/CSSPrimitiveValue.cpp:
    (WebCore::valueFromPool):
    Fix undefined behavior by casting the double to a signed integer because
    casting it to an unsigned one. Casting a negative double to an unsigned
    integer is UB.

    * Source/WebCore/dom/StyledElement.cpp:
    (WebCore::StyledElement::setInlineStyleProperty):
    Revert temporary workaround I had landed in 261490@main.

    Canonical link: https://commits.webkit.org/261527@main